--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,22 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
-  --fondo: #17171c; /*#F1F2F3*/
+  --fondo: #17171c;
 
-  --fondo-calculadora: #f1f2f3; /*#17171C*/
-  --texto: #000000; /*#FFFFFF*/
-  --primario: #4b5efc; /*#4B5EFC*/
-  --secundario: #c8c9cf; /*#4E505F*/
-  --terciario: #ffffff; /*#2E2F38*/
+  --fondo-calculadora: #f1f2f3;
+  --texto: #000000;
+  --primario: #4b5efc;
+  --secundario: #c8c9cf;
+  --terciario: #ffffff;
 
   --box-shadow: 0 0 50px rgba(0, 0, 0, 0.2);
+}
 
+body {
   background-color: var(--fondo);
   color: var(--texto);
+  transition: 1000ms;
 }
 
 * {
@@ -24,4 +28,14 @@
   height: 100vh;
   display: grid;
   place-items: center;
+}
+
+[data-theme="oscuro"] {
+  --fondo: #f1f2f3;
+
+  --fondo-calculadora: #17171c;
+  --texto: #ffffff;
+  --primario: #4b5efc;
+  --secundario: #4e505f;
+  --terciario: #2e2f38;
 }
